--- a/webgitsite/index.html
+++ b/webgitsite/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>webgitsite</title>
+    <link rel="stylesheet" href="waarom.css">
 </head>
 <body>
     <h1>
