--- a/webgitsite/index.html
+++ b/webgitsite/index.html
@@ -10,9 +10,14 @@
     <h1>
         Mijn eerste GIT website
     </h1>
-    <p>
-        Hier kan je mijn eerste geplubliceerde website met GIThub pages terugvinden
-    </p>
+    <article>
+        <section>
+            <p>
+                Hier kan je mijn eerste geplubliceerde website met GIThub pages terugvinden
+            </p>
+            <img src="afbeeldingen/GIThub pages.png" alt="GIYhub pages">
+        </section>
+    </article>
     <footer>
         <p>&copy;Lam Tim Nguyen Ngoc</p>
     </footer>
