--- a/webgitsite/index.html
+++ b/webgitsite/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
             <p>
                 Hier kan je mijn eerste geplubliceerde website met GIThub pages terugvinden
             </p>
-            <img src="afbeeldingen/GIThub pages.png" alt="GIYhub pages">
+            <img src="afbeeldingen/GIThubpages.png" alt="GIThub pages">
         </section>
     </article>
     <footer>
