--- a/webgitsite/index.html
+++ b/webgitsite/index.html
@@ -15,7 +15,7 @@
             <p>
                 Hier kan je mijn eerste geplubliceerde website met GIThub pages terugvinden
             </p>
-            <img src="afbeeldingen/GIThubpages.png" alt="GIThub pages">
+            <img src="C:\Users\lamtim.nguyenngoc\Immaculata Instituut\6ADB 6BIW-SoftOnt #2024-2025 - Documenten\aaWerkmappen\6BIW - Nguyen Ngoc Lam Tim\softont\web\LamTimNN-immalle.github.io\afbeeldingen\GIThubpages.png" alt="GIThub pages">
         </section>
     </article>
     <footer>
