--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <img src="image\Boskalislogos_01.png" alt="Boskalis logo">
+        <img src="image\Boskalislogos.png" alt="Boskalis logo">
     </header>
     <nav>
         <ul>
