--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="image\Boskalislogos.png" alt="Boskalis logo" title="slogan">
+        <img src="image/boskalislogos.png" alt="Boskalis logo" title="slogan">
     </header>
     <nav>
         <ul>
