--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="image\Boskalis.png" alt="Boskalis logo" title="slogan">
+        <img src="image\logo.png" alt="Boskalis logo" title="slogan">
     </header>
     <nav>
         <ul>
@@ -43,7 +43,10 @@
                 Werk bij Boskalis
             </h2>
             <p>
-                
+                Deze Boskalis website is grotendeels gemaakt in het nederlands. Boskalis vacature en Boskalis internationaal is beschikbaar in het engels.
+
+
+                Je kan de openstaande vacatures, trainingsprogramma en sollicitaiemogelijkheden vinden bij carrière.
             </p>
         </section>
     </article>
