--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -13,32 +13,34 @@
     <nav>
         <ul>
             <li>
-                <p>Over ons</p>
+                <a href="over ons.html">
+                    Over ons
+                </a>
             </li>
             <li>
-                <p>
+                <a href="Activiteiten.html">
                     Activiteiten
-                </p>
+                </a>
             </li>
             <li>
-                <p>
+                <a href="Markten.html">
                     Markten
-                </p>
+                </a>
             </li>
             <li>
-                <p>
+                <a href="Duurzaamheid.html">
                     Duurzaamheid
-                </p>
+                </a>
             </li>
             <li>
-                <p>
+                <a href="Carrière.html">
                     carrière
-                </p>
+                </a>
             </li>
         </ul>
     </nav>
     <article>
-        <section>
+        <section id="werken">
             <h2>
                 Werk bij Boskalis
             </h2>
@@ -48,6 +50,9 @@
 
                 Je kan de openstaande vacatures, trainingsprogramma en sollicitaiemogelijkheden vinden bij carrière.
             </p>
+        </section>
+        <section>
+
         </section>
     </article>
 </body>
