--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -13,27 +13,27 @@
     <nav>
         <ul>
             <li>
-                <a href="over ons.html">
+                <a href="over ons.html" target="_blank">
                     Over ons
                 </a>
             </li>
             <li>
-                <a href="Activiteiten.html">
+                <a href="Activiteiten.html" target="_blank">
                     Activiteiten
                 </a>
             </li>
             <li>
-                <a href="Markten.html">
+                <a href="Markten.html" target="_blank">
                     Markten
                 </a>
             </li>
             <li>
-                <a href="Duurzaamheid.html">
+                <a href="Duurzaamheid.html" target="_blank">
                     Duurzaamheid
                 </a>
             </li>
             <li>
-                <a href="Carrière.html">
+                <a href="Carrière.html" target="_blank">
                     carrière
                 </a>
             </li>
@@ -52,7 +52,14 @@
             </p>
         </section>
         <section>
+            <h2>
+                pers-nieuwsberichten
+            </h2>
+            <p>
+                De grootste deel van de pers en nieuwsberichten is in het nederlands en engels.
 
+                
+            </p>
         </section>
     </article>
 </body>
