home pagina update

--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="alweer.css" type="text/css"/>
+    <link href="alweer.css" type="text/css" rel="stylesheet"/>
     <title>Home</title>
 </head>
 <body>
@@ -47,9 +47,12 @@
             <p>
                 Deze Boskalis website is grotendeels gemaakt in het nederlands. Boskalis vacature en Boskalis internationaal is beschikbaar in het engels.
 
-
                 Je kan de openstaande vacatures, trainingsprogramma en sollicitaiemogelijkheden vinden bij carrière.
             </p>
+            <a href="https://careers.boskalis.com/">
+                werken bij Boskalis website
+
+            </a>
         </section>
         <section>
             <h2>
@@ -58,8 +61,26 @@
             <p>
                 De grootste deel van de pers en nieuwsberichten is in het nederlands en engels.
 
-                
+                voor nederlands talige berichten moet je in het archief het nederlands talige vlagetje
             </p>
+            <a href="https://boskalis.com/nl/pers/persberichten-en-bedrijfsnieuws">
+                naar pers- en nieuwsberichten
+            </a>
+        </section>
+        <section>
+            <h2>
+                Download center
+            </h2>
+            <p>
+                In de download center zijn er een aantal beschikbare documenten over ons bedrijf  om te downloaden. Bestanden zoals jaarverslagen, brochures, reglementen en notulen.
+
+                Er is per download een vlagetje om te zeggen in welke taal het document in zit.
+
+                Voor de zoekfunctie moet je engelse zoektermen gebruiken om het te laten werken
+            </p>
+            <a href="https://careers.boskalis.com/">
+                naar download center
+            </a>
         </section>
     </article>
 </body>
