copy right and nav fix try

--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -7,11 +7,11 @@
     <title>Home</title>
 </head>
 <body>
-    <header>
-        <img src="image\logo.png" alt="Boskalis logo" title="slogan">
-    </header>
     <nav>
         <ul>
+            <li>
+                <img src="image\logo.png" alt="Boskalis logo" title="slogan">
+            </li>
             <li>
                 <a href="over ons.html" target="_blank">
                     Over ons
@@ -83,5 +83,10 @@
             </a>
         </section>
     </article>
+    <footer>
+        <p>
+           2025 &copy;Roayal Boskalis
+        </p>
+    </footer>
 </body>
 </html>
