--- a/siteGIT/over ons.html
+++ b/siteGIT/over ons.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="alweer.css" type="text/css" rel="stylesheet"/>
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>
+                <img src="image\logo.png" alt="Boskalis logo" title="slogan">
+            </li>
+            <li>
+                <a href="over ons.html" target="_blank">
+                    Over ons
+                </a>
+            </li>
+            <li>
+                <a href="Activiteiten.html" target="_blank">
+                    Activiteiten
+                </a>
+            </li>
+            <li>
+                <a href="Markten.html" target="_blank">
+                    Markten
+                </a>
+            </li>
+            <li>
+                <a href="Duurzaamheid.html" target="_blank">
+                    Duurzaamheid
+                </a>
+            </li>
+            <li>
+                <a href="Carrière.html" target="_blank">
+                    carrière
+                </a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
