--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -39,7 +39,7 @@
             </li>
         </ul>
     </nav>
-    <article>
+    <article class="inhoud">
         <section id="werken">
             <h2>
                 Werk bij Boskalis
@@ -83,7 +83,7 @@
             </a>
         </section>
     </article>
-    <footer>
+    <footer class="inhoud">
         <p>
            2025 &copy;Roayal Boskalis
         </p>
