poging dropbox nav

--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -13,26 +13,29 @@
                 <img src="image\logo.png" alt="Boskalis logo" title="slogan">
             </li>
             <li>
+                meer info
+            </li>
+            <li class="dropdown">
                 <a href="over ons.html" target="_blank">
                     Over ons
                 </a>
             </li>
-            <li>
+            <li class="dropdown">
                 <a href="Activiteiten.html" target="_blank">
                     Activiteiten
                 </a>
             </li>
-            <li>
+            <li class="dropdown">
                 <a href="Markten.html" target="_blank">
                     Markten
                 </a>
             </li>
-            <li>
+            <li class="dropdown">
                 <a href="Duurzaamheid.html" target="_blank">
                     Duurzaamheid
                 </a>
             </li>
-            <li>
+            <li class="dropdown">
                 <a href="Carrière.html" target="_blank">
                     carrière
                 </a>
