--- a/siteGIT/over ons.html
+++ b/siteGIT/over ons.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="alweer.css" type="text/css" rel="stylesheet"/>
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <nav>
@@ -13,31 +13,32 @@
                 <img src="image\logo.png" alt="Boskalis logo" title="slogan">
             </li>
             <li>
+                meer info
+            </li>
+            <li class="dropdown">
                 <a href="over ons.html" target="_blank">
                     Over ons
                 </a>
             </li>
-            <li>
+            <li class="dropdown">
                 <a href="Activiteiten.html" target="_blank">
                     Activiteiten
                 </a>
             </li>
-            <li>
+            <li class="dropdown">
                 <a href="Markten.html" target="_blank">
                     Markten
                 </a>
             </li>
-            <li>
+            <li class="dropdown">
                 <a href="Duurzaamheid.html" target="_blank">
                     Duurzaamheid
                 </a>
             </li>
-            <li>
+            <li class="dropdown">
                 <a href="Carrière.html" target="_blank">
                     carrière
                 </a>
             </li>
         </ul>
     </nav>
-</body>
-</html>
