nav fix? en inhoud update

--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -52,7 +52,7 @@
 
                 Je kan de openstaande vacatures, trainingsprogramma en sollicitaiemogelijkheden vinden bij carrière.
             </p>
-            <a href="https://careers.boskalis.com/">
+            <a href="https://careers.boskalis.com/" class="extraweb">
                 werken bij Boskalis website
 
             </a>
@@ -66,7 +66,7 @@
 
                 voor nederlands talige berichten moet je in het archief het nederlands talige vlagetje
             </p>
-            <a href="https://boskalis.com/nl/pers/persberichten-en-bedrijfsnieuws">
+            <a href="https://boskalis.com/nl/pers/persberichten-en-bedrijfsnieuws" class="extraweb">
                 naar pers- en nieuwsberichten
             </a>
         </section>
@@ -81,7 +81,7 @@
 
                 Voor de zoekfunctie moet je engelse zoektermen gebruiken om het te laten werken
             </p>
-            <a href="https://careers.boskalis.com/">
+            <a href="https://careers.boskalis.com/" class="extraweb">
                 naar download center
             </a>
         </section>
