--- a/siteGIT/Carrière.html
+++ b/siteGIT/Carrière.html
@@ -42,3 +42,13 @@
             </li>
         </ul>
     </nav>
+    <article>
+        <section>
+            <h2>
+                impaktvolle projecten
+            </h2>
+            <p>
+                Als een top leider in baggeren, kust energy
+            </p>
+        </section>
+    </article>
