--- a/siteGIT/Carrière.html
+++ b/siteGIT/Carrière.html
@@ -48,7 +48,15 @@
                 impaktvolle projecten
             </h2>
             <p>
-                Als een top leider in baggeren, kust energy
+                Als een top leider in baggeren, kust energy en maritieme omgeving, nemen we duurzaamheid als prioriteit bij projecten. 
+                We gebruiken onze expertise en ervaring om buitengewone oplossingen, met extra aandacht aan sociale, economische en milieu omstandigheden 
+                maken we een nieuw leven op zee.
             </p>
+        </section>
+        <section>
+            <h2>
+                Boskalis cultuur
+            </h2>
+            
         </section>
     </article>
