--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -57,6 +57,9 @@
 
             </a>
         </section>
+        <aside>
+            <img src="siteGIT\image\werknemers .jpg" alt="werken">
+        </aside>
         <section>
             <h2>
                 pers-nieuwsberichten
@@ -70,6 +73,9 @@
                 naar pers- en nieuwsberichten
             </a>
         </section>
+        <aside>
+            <img src="siteGIT\image\camera persoon op strand.jpg" alt="camera persoon op strand">
+        </aside>
         <section>
             <h2>
                 Download center
@@ -85,6 +91,9 @@
                 naar download center
             </a>
         </section>
+        <aside>
+            <img src="siteGIT\image\internetkabels.jpg" alt="internetkabel">
+        </aside>
     </article>
     <footer class="inhoud">
         <p>
