extra inhoud 2de pagina

--- a/siteGIT/Carrière.html
+++ b/siteGIT/Carrière.html
@@ -57,6 +57,18 @@
             <h2>
                 Boskalis cultuur
             </h2>
-            
+            <p>
+                'iedereen is er altijd om je te supporten' is hoe collegas vaak de werk cultuur van Boskalis beschrijven. 
+                teamwork is onze belangerijkste benodigheid en we lossen onze complex en gespecialiseerde werk op samen met een 
+                collectieve geest. we krijgen altijd onze werk gedaan samen als een team. een ondernemende geest is altijd welkom.
+                innovatieve ideëen vinden op de probleem is wat we bekend voor zijn en wat onze klant zou verwachten.
+            </p>
         </section>
+        <h2>
+            jouw/onze ontwikkeling 
+        </h2>
+        <p>
+            onze werknemers, jij, bent de sluetel tot onze succes. door onze mensen uitmuntenheid strategie, streven we naar 
+            een omgeving waar je altijd word geoefent om de beste van jou te worden.
+        </p>
     </article>
