--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -58,7 +58,7 @@
             </a>
         </section>
         <aside>
-            <img src="siteGIT\image\werknemers .jpg" alt="werken">
+            <img src="siteGIT\image\werknemers .jpg" alt="werken" title="mensen op werk">
         </aside>
         <section>
             <h2>
@@ -69,12 +69,12 @@
 
                 voor nederlands talige berichten moet je in het archief het nederlands talige vlagetje
             </p>
-            <a href="https://boskalis.com/nl/pers/persberichten-en-bedrijfsnieuws" class="extraweb">
+            <a href="https://boskalis.com/nl/pers/persberichten-en-bedrijfsnieuws" class="extraweb" title="onze fotograaf">
                 naar pers- en nieuwsberichten
             </a>
         </section>
         <aside>
-            <img src="siteGIT\image\camera persoon op strand.jpg" alt="camera persoon op strand">
+            <img src="siteGIT\image\camera persoon op strand.jpg" alt="camera persoon op strand" title="een internetkabel">
         </aside>
         <section>
             <h2>
