hamburger menu poging en carrière verder vullen

--- a/siteGIT/Carrière.html
+++ b/siteGIT/Carrière.html
@@ -64,11 +64,17 @@
                 innovatieve ideëen vinden op de probleem is wat we bekend voor zijn en wat onze klant zou verwachten.
             </p>
         </section>
+        <section>
         <h2>
             jouw/onze ontwikkeling 
         </h2>
         <p>
             onze werknemers, jij, bent de sluetel tot onze succes. door onze mensen uitmuntenheid strategie, streven we naar 
-            een omgeving waar je altijd word geoefent om de beste van jou te worden.
+            een omgeving waar je altijd word geoefent om de beste van jou te worden. we offeren een grote colectie 
+            van keuzes en de benodigheden om jouw ambities te voltooien. de mogelijkheden zijn oneindig in Boskalis.
         </p>
+    </section>
+    <section>
+        
+    </section>
     </article>
