--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -7,11 +7,13 @@
     <title>Home</title>
 </head>
 <body>
+    <header>
+            <img src="image\logo.png" alt="Boskalis logo" title="slogan" class="logo">
+            <input class="side-menu" type="checkbox" id="side-menu"/>
+            <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+    </header>
     <nav>
-        <ul>
-            <li>
-                <img src="image\logo.png" alt="Boskalis logo" title="slogan">
-            </li>
+        <ul class="menu">
             <li>
                 meer info
             </li>
@@ -92,7 +94,7 @@
             </a>
         </section>
         <aside>
-            <img src="siteGIT\image\internetkabels.jpg" alt="internetkabel">
+            <img src="siteGIT\image\internetkabels.jpg" alt="internetkabel" title="internetkabel">
         </aside>
     </article>
     <footer class="inhoud">
