afbeelding fix poging 2

--- a/siteGIT/Carrière.html
+++ b/siteGIT/Carrière.html
@@ -7,41 +7,43 @@
     <title>Home</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>
-                <img src="image\logo.png" alt="Boskalis logo" title="slogan">
-            </li>
-            <li>
-                meer info
-            </li>
-            <li class="dropdown">
-                <a href="over ons.html" target="_blank">
-                    Over ons
-                </a>
-            </li>
-            <li class="dropdown">
-                <a href="Activiteiten.html" target="_blank">
-                    Activiteiten
-                </a>
-            </li>
-            <li class="dropdown">
-                <a href="Markten.html" target="_blank">
-                    Markten
-                </a>
-            </li>
-            <li class="dropdown">
-                <a href="Duurzaamheid.html" target="_blank">
-                    Duurzaamheid
-                </a>
-            </li>
-            <li class="dropdown">
-                <a href="Carrière.html" target="_blank">
-                    carrière
-                </a>
-            </li>
-        </ul>
-    </nav>
+    <header>
+        <img src="image\logo.png" alt="Boskalis logo" title="slogan" class="logo">
+        <input class="side-menu" type="checkbox" id="side-menu"/>
+        <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+</header>
+<nav>
+    <ul class="menu">
+        <li>
+            meer info
+        </li>
+        <li class="dropdown">
+            <a href="over ons.html" target="_blank">
+                Over ons
+            </a>
+        </li>
+        <li class="dropdown">
+            <a href="Activiteiten.html" target="_blank">
+                Activiteiten
+            </a>
+        </li>
+        <li class="dropdown">
+            <a href="Markten.html" target="_blank">
+                Markten
+            </a>
+        </li>
+        <li class="dropdown">
+            <a href="Duurzaamheid.html" target="_blank">
+                Duurzaamheid
+            </a>
+        </li>
+        <li class="dropdown">
+            <a href="Carrière.html" target="_blank">
+                carrière
+            </a>
+        </li>
+    </ul>
+</nav>
     <article>
         <section>
             <h2>
