--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -60,7 +60,7 @@
             </a>
         </section>
         <aside>
-            <img src="siteGIT\image\werknemers.png" alt="werken" title="mensen op werk">
+            <img src="image\werknemers .png" alt="werken" title="mensen op werk">
         </aside>
         <section>
             <h2>
@@ -76,7 +76,7 @@
             </a>
         </section>
         <aside>
-            <img src="siteGIT\image\camera persoon op strand.png" alt="camera persoon op strand" title="een internetkabel">
+            <img src="image\camera persoon op strand.png" alt="camera persoon op strand" title="een internetkabel">
         </aside>
         <section>
             <h2>
@@ -94,7 +94,7 @@
             </a>
         </section>
         <aside>
-            <img src="siteGIT\image\internetkabels.png" alt="internetkabel" title="internetkabel">
+            <img src="image\internetkabels.png" alt="internetkabel" title="internetkabel">
         </aside>
     </article>
     <footer class="inhoud">
