--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -12,38 +12,44 @@
             <input class="side-menu" type="checkbox" id="side-menu"/>
             <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
     </header>
-    <nav>
-        <ul class="menu">
-            <li>
-                meer info
-            </li>
-            <li class="dropdown">
-                <a href="over ons.html" target="_blank">
-                    Over ons
-                </a>
-            </li>
-            <li class="dropdown">
-                <a href="Activiteiten.html" target="_blank">
-                    Activiteiten
-                </a>
-            </li>
-            <li class="dropdown">
-                <a href="Markten.html" target="_blank">
-                    Markten
-                </a>
-            </li>
-            <li class="dropdown">
-                <a href="Duurzaamheid.html" target="_blank">
-                    Duurzaamheid
-                </a>
-            </li>
-            <li class="dropdown">
-                <a href="Carrière.html" target="_blank">
-                    carrière
-                </a>
-            </li>
-        </ul>
-    </nav>
+        <nav>
+            <div id="menutoggle">
+                <input type="checkbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+                <ul class="menu">
+                    <li>
+                        meer info
+                    </li>
+                    <li class="dropdown">
+                        <a href="over ons.html" target="_blank">
+                            Over ons
+                        </a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="Activiteiten.html" target="_blank">
+                            Activiteiten
+                        </a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="Markten.html" target="_blank">
+                            Markten
+                        </a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="Duurzaamheid.html" target="_blank">
+                            Duurzaamheid
+                        </a>
+                    </li>
+                  <li class="dropdown">
+                        <a href="Carrière.html" target="_blank">
+                            carrière
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     <article class="inhoud">
         <section id="werken">
             <h2>
