--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -33,11 +33,6 @@
                         </a>
                     </li>
                     <li class="dropdown">
-                        <a href="Markten.html" target="_blank">
-                            Markten
-                        </a>
-                    </li>
-                    <li class="dropdown">
                         <a href="Duurzaamheid.html" target="_blank">
                             Duurzaamheid
                         </a>
@@ -45,6 +40,11 @@
                   <li class="dropdown">
                         <a href="Carrière.html" target="_blank">
                             carrière
+                        </a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="ENhome.html" target="_blank">
+                            <img src="image\Flag_of_the_United_Kingdom_(1-2).svg.png" alt="english flag" title="english site">
                         </a>
                     </li>
                 </ul>
