--- a/siteGIT/over ons.html
+++ b/siteGIT/over ons.html
@@ -28,11 +28,6 @@
             </a>
         </li>
         <li class="dropdown">
-            <a href="Markten.html" target="_blank">
-                Markten
-            </a>
-        </li>
-        <li class="dropdown">
             <a href="Duurzaamheid.html" target="_blank">
                 Duurzaamheid
             </a>
@@ -42,5 +37,10 @@
                 carrière
             </a>
         </li>
+        <li class="dropdown">
+            <a href="ENhome.html" target="_blank">
+                <img src="image\Flag_of_the_United_Kingdom_(1-2).svg.png" alt="english flag" title="english site">
+            </a>
+        </li>z
     </ul>
 </nav>
