english site klaar

--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -105,7 +105,7 @@
     </article>
     <footer class="inhoud">
         <p>
-           2025 &copy;Roayal Boskalis
+           2025 &copy; Lam Tim Nguyen Ngoc: Roayal Boskalis
         </p>
     </footer>
 </body>
