--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -15,9 +15,14 @@
         <nav>
             <div id="menutoggle">
                 <input type="checkbox" />
+                <label for="menu-toggle-box">
                 <span></span>
                 <span></span>
                 <span></span>
+            </label>
+            <a href="ENhome.html" target="_blank" class="logo-link">
+                <img src="image\Flag_of_the_United_Kingdom_(1-2).svg.png" alt="english flag" title="english site" class="english">
+            </a>
                 <ul class="menu">
                     <li>
                         meer info
@@ -40,11 +45,6 @@
                   <li class="dropdown">
                         <a href="Carrière.html" target="_blank">
                             carrière
-                        </a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="ENhome.html" target="_blank">
-                            <img src="image\Flag_of_the_United_Kingdom_(1-2).svg.png" alt="english flag" title="english site">
                         </a>
                     </li>
                 </ul>
