--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -8,73 +8,65 @@
 </head>
 <body>
     <header>
-            <img src="image\logo.png" alt="Boskalis logo" title="slogan" class="logo">
-            <input class="side-menu" type="checkbox" id="side-menu"/>
-            <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+        <img src="image\logo.png" alt="Boskalis logo" title="slogan" class="logo">
+        <input class="side-menu" type="checkbox" id="side-menu"/>
+        <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
     </header>
-        <nav>
-            <div id="menutoggle">
-                <input type="checkbox" />
-                <label for="menu-toggle-box">
+    <nav>
+        <div id="menutoggle">
+            <input type="checkbox" id="menu-toggle-box"/>
+            <label for="menu-toggle-box">
                 <span></span>
                 <span></span>
                 <span></span>
             </label>
+            <!-- Afbeelding als link in het hamburger-menu -->
             <a href="ENhome.html" target="_blank" class="logo-link">
                 <img src="image\Flag_of_the_United_Kingdom_(1-2).svg.png" alt="english flag" title="english site" class="english">
             </a>
-                <ul class="menu">
-                    <li>
-                        meer info
-                    </li>
-                    <li class="dropdown">
-                        <a href="over ons.html" target="_blank">
-                            Over ons
-                        </a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="Activiteiten.html" target="_blank">
-                            Activiteiten
-                        </a>
-                    </li>
-                    <li class="dropdown">
-                        <a href="Duurzaamheid.html" target="_blank">
-                            Duurzaamheid
-                        </a>
-                    </li>
-                  <li class="dropdown">
-                        <a href="Carrière.html" target="_blank">
-                            carrière
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+            <ul class="menu">
+                <li>
+                    meer info
+                </li>
+                <li class="dropdown">
+                    <a href="over ons.html" target="_blank">
+                        Over ons
+                    </a>
+                </li>
+                <li class="dropdown">
+                    <a href="Activiteiten.html" target="_blank">
+                        Activiteiten
+                    </a>
+                </li>
+                <li class="dropdown">
+                    <a href="Duurzaamheid.html" target="_blank">
+                        Duurzaamheid
+                    </a>
+                </li>
+                <li class="dropdown">
+                    <a href="Carrière.html" target="_blank">
+                        carrière
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <article class="inhoud">
         <section id="werken">
-            <h2>
-                Werk bij Boskalis
-            </h2>
+            <h2>Werk bij Boskalis</h2>
             <p>
                 Deze Boskalis website is grotendeels gemaakt in het nederlands. Boskalis vacature en Boskalis internationaal is beschikbaar in het engels.
-
-                Je kan de openstaande vacatures, trainingsprogramma en sollicitaiemogelijkheden vinden bij carrière.
+                Je kan de openstaande vacatures, trainingsprogramma en sollicitatiemogelijkheden vinden bij carrière.
             </p>
-            <a href="https://careers.boskalis.com/" class="extraweb">
-                werken bij Boskalis website
-
-            </a>
+            <a href="https://careers.boskalis.com/" class="extraweb">werken bij Boskalis website</a>
         </section>
         <aside>
             <img src="image\werknemers .png" alt="werken" title="mensen op werk">
         </aside>
         <section>
-            <h2>
-                pers-nieuwsberichten
-            </h2>
+            <h2>pers-nieuwsberichten</h2>
             <p>
                 De grootste deel van de pers en nieuwsberichten is in het nederlands en engels.
-
                 voor nederlands talige berichten moet je in het archief het nederlands talige vlagetje
             </p>
             <a href="https://boskalis.com/nl/pers/persberichten-en-bedrijfsnieuws" class="extraweb" title="onze fotograaf">
@@ -85,28 +77,20 @@
             <img src="image\camera persoon op strand.png" alt="camera persoon op strand" title="een internetkabel">
         </aside>
         <section>
-            <h2>
-                Download center
-            </h2>
+            <h2>Download center</h2>
             <p>
                 In de download center zijn er een aantal beschikbare documenten over ons bedrijf  om te downloaden. Bestanden zoals jaarverslagen, brochures, reglementen en notulen.
-
                 Er is per download een vlagetje om te zeggen in welke taal het document in zit.
-
                 Voor de zoekfunctie moet je engelse zoektermen gebruiken om het te laten werken
             </p>
-            <a href="https://careers.boskalis.com/" class="extraweb">
-                naar download center
-            </a>
+            <a href="https://careers.boskalis.com/" class="extraweb">naar download center</a>
         </section>
         <aside>
             <img src="image\internetkabels.png" alt="internetkabel" title="internetkabel">
         </aside>
     </article>
     <footer class="inhoud">
-        <p>
-           2025 &copy; Lam Tim Nguyen Ngoc: Roayal Boskalis
-        </p>
+        <p>2025 &copy; Lam Tim Nguyen Ngoc: Roayal Boskalis</p>
     </footer>
 </body>
 </html>
