--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -20,33 +20,23 @@
                 <span></span>
                 <span></span>
             </label>
-            <!-- Afbeelding als link in het hamburger-menu -->
-            <a href="ENhome.html" target="_blank" class="logo-link">
+            <!-- De Engelse vlag link die pas zichtbaar is wanneer het hamburger menu open is -->
+            <a href="ENhome.html" target="_blank" class="logo-link english-link">
                 <img src="image\Flag_of_the_United_Kingdom_(1-2).svg.png" alt="english flag" title="english site" class="english">
             </a>
             <ul class="menu">
-                <li>
-                    meer info
+                <li>meer info</li>
+                <li class="dropdown">
+                    <a href="over ons.html" target="_blank">Over ons</a>
                 </li>
                 <li class="dropdown">
-                    <a href="over ons.html" target="_blank">
-                        Over ons
-                    </a>
+                    <a href="Activiteiten.html" target="_blank">Activiteiten</a>
                 </li>
                 <li class="dropdown">
-                    <a href="Activiteiten.html" target="_blank">
-                        Activiteiten
-                    </a>
+                    <a href="Duurzaamheid.html" target="_blank">Duurzaamheid</a>
                 </li>
                 <li class="dropdown">
-                    <a href="Duurzaamheid.html" target="_blank">
-                        Duurzaamheid
-                    </a>
-                </li>
-                <li class="dropdown">
-                    <a href="Carrière.html" target="_blank">
-                        carrière
-                    </a>
+                    <a href="Carrière.html" target="_blank">carrière</a>
                 </li>
             </ul>
         </div>
@@ -56,7 +46,7 @@
             <h2>Werk bij Boskalis</h2>
             <p>
                 Deze Boskalis website is grotendeels gemaakt in het nederlands. Boskalis vacature en Boskalis internationaal is beschikbaar in het engels.
-                Je kan de openstaande vacatures, trainingsprogramma en sollicitatiemogelijkheden vinden bij carrière.
+                Je kan de openstaande vacatures, trainingsprogramma en sollicitaiemogelijkheden vinden bij carrière.
             </p>
             <a href="https://careers.boskalis.com/" class="extraweb">werken bij Boskalis website</a>
         </section>
@@ -90,7 +80,7 @@
         </aside>
     </article>
     <footer class="inhoud">
-        <p>2025 &copy; Lam Tim Nguyen Ngoc: Roayal Boskalis</p>
+        <p>2025 &copy; Roayal Boskalis</p>
     </footer>
 </body>
 </html>
