poging afbeeldingen aside

--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <header>
-        <img src="image\logo.png" alt="Boskalis logo" title="slogan" class="logo">
-        <input class="side-menu" type="checkbox" id="side-menu"/>
-        <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+        <div class="header-left">
+            <img src="image\logo.png" alt="Boskalis logo" title="slogan" class="logo">
+        </div>
+        <div class="header-right">
+            <input class="side-menu" type="checkbox" id="side-menu"/>
+            <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+        </div>
     </header>
     <nav>
         <div id="menutoggle">
