--- a/siteGIT/index.html
+++ b/siteGIT/index.html
@@ -12,36 +12,34 @@
             <img src="image\logo.png" alt="Boskalis logo" title="slogan" class="logo">
         </div>
         <div class="header-right">
-            <!-- Hamburger menu en navigatie rechts -->
-            <nav>
-                <div id="menutoggle">
-                    <input type="checkbox" id="menu-toggle-box"/>
-                    <label for="menu-toggle-box">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </label>
-                    <!-- Engelse vlag link die pas zichtbaar is wanneer het hamburger menu open is -->
-                    <a href="ENhome.html" target="_blank" class="logo-link english-link">
-                        <img src="image\Flag_of_the_United_Kingdom_(1-2).svg.png" alt="english flag" title="english site" class="english">
-                    </a>
-                    <ul class="menu">
-                        <li>meer info</li>
-                        <li class="dropdown">
-                            <a href="over ons.html" target="_blank">Over ons</a>
-                        </li>
-                        <li class="dropdown">
-                            <a href="Activiteiten.html" target="_blank">Activiteiten</a>
-                        </li>
-                        <li class="dropdown">
-                            <a href="Duurzaamheid.html" target="_blank">Duurzaamheid</a>
-                        </li>
-                        <li class="dropdown">
-                            <a href="Carrière.html" target="_blank">carrière</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+            <!-- Engelse vlag naast hamburger menu -->
+            <a href="ENhome.html" target="_blank" class="logo-link english-link">
+                <img src="image\Flag_of_the_United_Kingdom_(1-2).svg.png" alt="english flag" title="english site" class="english">
+            </a>
+            <!-- Hamburger menu -->
+            <div id="menutoggle">
+                <input type="checkbox" id="menu-toggle-box"/>
+                <label for="menu-toggle-box">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
+                <ul class="menu">
+                    <li>meer info</li>
+                    <li class="dropdown">
+                        <a href="over ons.html" target="_blank">Over ons</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="Activiteiten.html" target="_blank">Activiteiten</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="Duurzaamheid.html" target="_blank">Duurzaamheid</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="Carrière.html" target="_blank">carrière</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
     <article class="inhoud">
@@ -83,7 +81,7 @@
         </aside>
     </article>
     <footer class="inhoud">
-        <p>2025 &copy; Lam Tim Nguyen Ngoc: Roayal Boskalis</p>
+        <p>2025 &copy; Roayal Boskalis</p>
     </footer>
 </body>
 </html>
